--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
-    "shortid": "^2.2.16"
+    "commander": "^9.4.1",
+    "shortid": "^2.2.16",
+    "yargs": "^17.6.2"
   }
 }
